--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Cubo Development</title>
+	<link rel="shortcut icon" href="https://gdurl.com/b4XX" type="image/x-icon">
 	<link rel="stylesheet" href="assets/css/style.css">
+	<link rel="stylesheet" href="assets/fonts/css/fontello.css">
 </head>
 <body>
 	<main>
@@ -19,18 +21,42 @@
 				</div>
 				<nav>
 					<ul>
-						<li><a class="menu_item" href="#"> <i class="fa fa-user"></i> <span>El Salvador</span></a></li>
-						<li><a class="menu_item" href="#"> <i class="fa fa-user"></i> <span>El Mundo</span></a></li>
-						<li><a class="menu_item" href="#"> <i class="fa fa-user"></i> <span>Producción</span></a></li>
-						<li><a class="menu_item" href="#"> <i class="fa fa-user"></i> <span>Inventario</span></a></li>
-						<li><a class="menu_item" href="#"> <i class="fa fa-user"></i> <span>Kiosko</span></a></li>
-						<li><a class="menu_item" href="#"> <i class="fa fa-user"></i> <span>Admin</span></a></li>
+						<li><a class="menu_item" href="#"> <i class="icon-list-alt"></i> <span>El Salvador</span></a></li>
+						<li><a class="menu_item" href="#"> <i class="icon-globe"></i> <span>El Mundo</span></a></li>
+						<li><a class="menu_item" href="#"> <i class="icon-cog"></i> <span>Producción</span></a></li>
+						<li><a class="menu_item" href="#"> <i class="icon-box"></i> <span>Inventario</span></a></li>
+						<li><a class="menu_item" href="#"> <i class="icon-doc-inv"></i> <span>Kiosko</span></a></li>
+						<li><a class="menu_item" href="#"> <i class="icon-cube"></i> <span>Admin</span></a></li>
 					</ul>
 				</nav>
 			</div>
 			<div class="account">
 				<div class="user-config">
 					<img src="https://static.elmundo.sv/letters_cognito/L.svg">
+				</div>
+				<div class="user-config user-options">
+					<a class="user-options-btn">
+						<i class="icon-down-dir"></i>
+					</a>
+				</div>
+
+				<div class="wraper-options">
+					<p class="wrapper-options-name">Luis Cruz</p>
+					<p class="wrapper-options-email">lcruz@elmundo.sv</p>
+					<ul class="wrapper-options-menu">
+						<li>
+							<a href="#">
+								<i class="icon-user-o"></i>
+								<span>Mi perfil</span>
+							</a>
+						</li>
+						<li>
+							<a href="#">
+								<i class="icon-logout"></i>
+								<span>Cerrar sesión</span>
+							</a>
+						</li>
+					</ul>
 				</div>
 			</div>
 		</header>
@@ -40,5 +66,8 @@
 			</article>
 		</section>
 	</main>
+	
+	<script src="assets/scripts/jquery-3.5.1.min.js"></script>
+	<script src="assets/scripts/main.js"></script>
 </body>
 </html>
