Iniciando el dashboad y header de los paneles

--- a/index.html
+++ b/index.html
@@ -60,9 +60,48 @@
 				</div>
 			</div>
 		</header>
-		<section>
-			<article>
 
+		<section class="dashboard">
+			<article class="dash-panel">
+				<header class="dash-panel-header">
+					<p class="dash-panel-header-title">Ediciones</p>
+					<div class="dash-panel-header-buttons">
+						<input class="btn panel_date_range" type="text" name="range">
+						<button class="btn"><i class="icon-trash"></i><span>Cancelar</span></button>
+						<button class="btn"><i class="icon-plus"></i><span>Agregar</span></button>
+					</div>
+				</header>
+				<div class="dash-panel-content">
+					<p>Hola Mundo</p>
+				</div>
+			</article>
+			<article class="dash-panel">
+				<header class="dash-panel-header">
+					<p class="dash-panel-header-title">Pliegos</p>
+					<div class="dash-panel-header-legend">
+						<span class="badge dash-panel-header-legend-item">
+							<i class="icon-thumbs-up-alt"></i>
+							<span>A tiempo</span> 
+							<span class="badge bg-red badge-number">5</span>
+						</span>
+						<span class="badge dash-panel-header-legend-item">
+							<i class="icon-thumbs-down-alt"></i>
+							<span>Con retraso</span> 
+							<span class="badge bg-red badge-number">2</span>
+						</span>
+					</div>
+				</header>
+				<div class="dash-panel-content">
+					<p>Hola Mundo</p>
+				</div>
+			</article>
+			<article class="dash-panel">
+				<header class="dash-panel-header">
+					<p class="dash-panel-header-title">Páginas</p>
+				</header>
+				<div class="dash-panel-content">
+					<p>Hola Mundo</p>
+				</div>
 			</article>
 		</section>
 	</main>
