--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
 						<li><a class="menu_item" href="#"> <i class="icon-list-alt"></i> <span>El Salvador</span></a></li>
 						<li><a class="menu_item" href="#"> <i class="icon-globe"></i> <span>El Mundo</span></a></li>
 						<li><a class="menu_item" href="#"> <i class="icon-cog"></i> <span>Producción</span></a></li>
-						<li><a class="menu_item" href="#"> <i class="icon-box"></i> <span>Inventario</span></a></li>
+						<li><a class="menu_item" href="#"> <i class="icon-cube"></i> <span>Inventario</span></a></li>
 						<li><a class="menu_item" href="#"> <i class="icon-doc-inv"></i> <span>Kiosko</span></a></li>
-						<li><a class="menu_item" href="#"> <i class="icon-cube"></i> <span>Admin</span></a></li>
+						<li><a class="menu_item" href="#"> <i class="icon-shield"></i> <span>Admin</span></a></li>
 					</ul>
 				</nav>
 			</div>
