Table and Card It is Done

--- a/index.html
+++ b/index.html
@@ -72,7 +72,84 @@
 					</div>
 				</header>
 				<div class="dash-panel-content">
-					<p>Hola Mundo</p>
+					<table class="table-head">
+						<tr>
+							<th width="10%">Tipo</th>
+							<th width="10%">N°</th>
+							<th width="15%">Edición</th>
+							<th width="13%">Páginas</th>
+							<th width="12%">Pliegos</th>
+							<th width="15%">Ejemplares</th>
+							<th width="15%">Estado</th>
+							<th width="5%">--</th>
+						</tr>
+					</table>
+					<div class="dash-panel-table">
+						<table>
+							<tbody>
+								<tr>
+									<td width="10%"><img src="https://cubo.elmundo.sv/public/img/news.png"></td>
+									<td width="10%">182</td>
+									<td width="15%">21/04/2021</td>
+									<td width="13%">56</td>
+									<td width="12%">7</td>
+									<td width="15%">—</td>
+									<td width="15%"><img src="https://cubo.elmundo.sv/public/img/open.png"></td>
+									<td width="5%">
+										<a class="badge btn-report-edition"><i class="icon-info"></i></a>
+									</td>
+								</tr>
+								<tr>
+									<td width="10%"><img src="https://cubo.elmundo.sv/public/img/news.png"></td>
+									<td width="10%">182</td>
+									<td width="15%">21/04/2021</td>
+									<td width="13%">56</td>
+									<td width="12%">7</td>
+									<td width="15%">—</td>
+									<td width="15%"><img src="https://cubo.elmundo.sv/public/img/open.png"></td>
+									<td width="5%">
+										<a class="badge btn-report-edition"><i class="icon-info"></i></a>
+									</td>
+								</tr>
+								<tr>
+									<td width="10%"><img src="https://cubo.elmundo.sv/public/img/news.png"></td>
+									<td width="10%">182</td>
+									<td width="15%">21/04/2021</td>
+									<td width="13%">56</td>
+									<td width="12%">7</td>
+									<td width="15%">—</td>
+									<td width="15%"><img src="https://cubo.elmundo.sv/public/img/open.png"></td>
+									<td width="5%">
+										<a class="badge btn-report-edition"><i class="icon-info"></i></a>
+									</td>
+								</tr>
+								<tr>
+									<td width="10%"><img src="https://cubo.elmundo.sv/public/img/news.png"></td>
+									<td width="10%">182</td>
+									<td width="15%">21/04/2021</td>
+									<td width="13%">56</td>
+									<td width="12%">7</td>
+									<td width="15%">—</td>
+									<td width="15%"><img src="https://cubo.elmundo.sv/public/img/open.png"></td>
+									<td width="5%">
+										<a class="badge btn-report-edition"><i class="icon-info"></i></a>
+									</td>
+								</tr>
+								<tr>
+									<td width="10%"><img src="https://cubo.elmundo.sv/public/img/news.png"></td>
+									<td width="10%">182</td>
+									<td width="15%">21/04/2021</td>
+									<td width="13%">56</td>
+									<td width="12%">7</td>
+									<td width="15%">—</td>
+									<td width="15%"><img src="https://cubo.elmundo.sv/public/img/open.png"></td>
+									<td width="5%">
+										<a class="badge btn-report-edition"><i class="icon-info"></i></a>
+									</td>
+								</tr>
+							</tbody>
+						</table>
+					</div>
 				</div>
 			</article>
 			<article class="dash-panel">
@@ -92,7 +169,58 @@
 					</div>
 				</header>
 				<div class="dash-panel-content">
-					<p>Hola Mundo</p>
+					<div class="card">
+						<div class="card-header">
+							<p class="card-header-title">Pliego 1</p>
+							<p class="card-header-legend">
+								<span class="">Esperado 03:30 PM</span>
+								<span class="">Real 03:31 PM</span> 
+							</p>
+						</div>
+						<div class="card-elements">
+							<span class="card-element-like">
+								<i class="icon-user-o"></i>
+							</span>
+						</div>
+						<div class="card-content">
+							<ul class="pliego-pages">
+								<li><p>25</p></li>
+								<li><p>26</p></li>
+								<li><p>27</p></li>
+								<li><p>28</p></li>
+								<li><p>29</p></li>
+								<li><p>30</p></li>
+								<li><p>31</p></li>
+								<li><p>32</p></li>
+							</ul>
+						</div>
+					</div>
+					<div class="card">
+						<div class="card-header">
+							<p class="card-header-title">Pliego 1</p>
+							<p class="card-header-legend">
+								<span class="">Esperado 03:30 PM</span>
+								<span class="">Real 03:31 PM</span> 
+							</p>
+						</div>
+						<div class="card-elements">
+							<span class="card-element-like">
+								<i class="icon-user-o"></i>
+							</span>
+						</div>
+						<div class="card-content">
+							<ul class="pliego-pages">
+								<li><p>25</p></li>
+								<li><p>26</p></li>
+								<li><p>27</p></li>
+								<li><p>28</p></li>
+								<li><p>29</p></li>
+								<li><p>30</p></li>
+								<li><p>31</p></li>
+								<li><p>32</p></li>
+							</ul>
+						</div>
+					</div>
 				</div>
 			</article>
 			<article class="dash-panel">
