Custom Scrollbar - all browsers (Firefox thin)

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 							<th width="12%">Pliegos</th>
 							<th width="15%">Ejemplares</th>
 							<th width="15%">Estado</th>
-							<th width="5%">--</th>
+							<th width="5%"></th>
 						</tr>
 					</table>
 					<div class="dash-panel-table">
