--- a/index.html
+++ b/index.html
@@ -552,6 +552,19 @@
 				</div>
 			</article>
 		</section>
+		<div class="modals">
+			<div class="modal">
+				<header class="modal-header">
+					<p>Modal test 01</p>
+				</header>
+				<section class="modal-content">
+					
+				</section>
+				<footer class="modal-footer">
+					<p>Botones</p>
+				</footer>
+			</div>
+		</div>
 	</main>
 	
 	<script src="assets/scripts/jquery-3.5.1.min.js"></script>
